# casbin-sqlx-adapter

./: .gitignore  Cargo.toml  README.md  bleur.toml  flake.nix  shell.nix
.github/workflows/: ci.yml  coverage.yml  release.yml
.sqlx/: query-1cabd2f674da323da9e0da724d3bcfe5f968b31500e8c8cf97fe16814bc04164.json  query-24876462291b90324dfe3682e9f36247a328db780a48da47c9402e1d3ebd80c9.json  query-36ad74d145318f6da577834578f4d087d2be1af041834137a2d88d2e35e55a6e.json  query-3ae7e28de7cb8896086c186dbc0e78f2a23eff67925322bdd3646d063d710584.json  query-438ee38e669be96e562d09d3bc5806b4c78b7aa2a9609c4eccb941c7dff7b107.json  query-530d3f59ba6d986d3354242ff25faae78671d69c8935d2a2d57c0f9d1e91e832.json  query-5c221dea5dbeb61d1fa6881874adde4cdf8b9510ed4f6170db482ab4373b30a1.json  query-5e197eb50652dbbfd14df29b60ae05246b9aa3b2ac15b40c75a572a27985d1b7.json  query-691960c016861fbb27f123f9a4e4b70295c22468126e4aff4a5ea09166aa89e6.json  query-7067873f4ca887bf691a3b92a723b648636a2b394df7deec3253d5fc8bacdde1.json  query-87fa46998bdfaeab2400a20493f525236e8ca6451b3b3f9b803d63cdba952cf8.json  query-dc8abb55cf0b35edab2a568a287c7eed460ca39ffb72076a3b8445c42ee21e00.json
src/: adapter.rs
