[package]
name = "sqlx-adapter"
version = "1.8.0"
authors = ["Eason Chai <hackerchai.com@gmail.com>","Cheng JIANG <jiang.cheng@vip.163.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Sqlx adapter for casbin-rs"
homepage= "https://casbin.apache.org"
readme= "README.md"

[dependencies]
casbin = { version = "2.20.0", default-features = false }
sqlx = { version = "0.9", default-features = false, features = [ "macros" ,"runtime-async-std","tls-native-tls" ] }
async-trait = "0.1.51"
dotenvy = { version = "0.15.0", default-features = false }
tokio = { version = "1.10.0", default-features = false, optional = true }
async-std = { version = "1.9.0", default-features = false, optional = true }

[features]
default = ["postgres", "runtime-tokio-native-tls"]

#databases
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]

# async runtime
# async-std
runtime-async-std-native-tls = ["casbin/runtime-async-std", "sqlx/runtime-async-std"]
runtime-async-std-rustls = ["casbin/runtime-async-std", "sqlx/tls-rustls"]
# tokio
runtime-tokio = ["casbin/runtime-tokio", "sqlx/runtime-tokio"]
runtime-tokio-native-tls = ["casbin/runtime-tokio", "sqlx/tls-native-tls"]
runtime-tokio-rustls = ["casbin/runtime-tokio", "sqlx/tls-native-tls"]

[dev-dependencies]
async-std = { version = "1.13.2", features = [ "attributes" ] }
tokio = { version = "1.52.3", features = [ "full" ] }

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3

[profile.dev]
split-debuginfo = "packed"
